0.2.6 (05.07.25)

 - Separated preferences logic and ui
 - Preferences can now be translated

0.2.5 (01.07.25)

 - Turns the logging switch off when the logging folder does not have write permission.

0.2.4 (25.06.25)

 - New Window fix

0.2.1 (22.06.25)

 - Added the ability to open multiple instances of the app

0.2.0 (21.06.25)

- Added BIN, DEC and OCT data formats
- Bug fixes

0.1.29 (17.06.25)

- Bug fixes
- New app icon
- Runtime-version 48
- Advandced Serial settings

0.1.28 (15.06.25)

- Show and select line ends (TX and RX).

0.1.27 (12.06.25)

- New baud rates
- Select line ending

0.1.26 (04.05.25)

 - Added new baudrate: 1500000

0.1.25 (02.11.24)

 - org.gnome.Platform ver 47

0.1.24 (26.10.24)

 - Reduced height of the preferences window.
 - Added Russian translation.

0.1.23 (06.08.24)

 - Started Estonian translation.
 - Improved code.

0.1.22 (31.07.24)

 - Logs HEX data.

0.1.20 (30.07.24)

 - User can customise text view colors.

0.1.19 (29.07.24)

 - Improved logging.
 - Coloured output.

0.1.18 (28.07.24)

 - Improved logging.

0.1.17 (27.07.24)

 - Auto reconnects to the serial port.

0.1.16 (26.07.24)

 - Logging data to a file.

0.1.15 (21.04.24)

 - Changed back to tauno-monitor.

0.1.14 (20.04.24)

 - Removed hyphen(`-`) and underscore (`_`) from app id.

0.1.13 (20.04.24)

 - Replaced App ID hyphen(`-`) with underscore (`_`)

0.1.12 (20.04.24)

 - Added "Clear" button.

0.1.11 (11.02.24)

 - Added timestamp setting.

0.1.10 (05.02.24)

 - Automatically scan ports if connection is lost.

0.1.9 (04.02.24)

 - Automatically close serial port if the connection is lost.

0.1.8 (10.12.23)

- Added RX data HEX mode.

0.1.7 (06.12.23)

- Enter == Send.

0.1.6 (03.12.23)

- It reads now bytes, not lines.