@@ -55,7 +55,8 @@
     <release version="0.2.6" date="2025-07-05">
       <description>
         <ul>
-          <li>Separated preferences logic and ui.</li>
+          <li>Added "New Window" in menu</li>
+          <li>Separated preferences logic and ui</li>
           <li>Preferences can now be translated</li>
         </ul>
       </description>
