@@ -213,6 +213,10 @@
   <menu id="primary_menu">
     <section>
       <item>
+        <attribute name="label" translatable="yes">_New Window</attribute>
+        <attribute name="action">app.newwindow</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">_Guide</attribute>
         <attribute name="action">win.guide</attribute>
       </item>
@@ -225,7 +229,7 @@
         <attribute name="action">win.show-help-overlay</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_About Tauno Monitor</attribute>
+        <attribute name="label" translatable="yes">_About</attribute>
         <attribute name="action">app.about</attribute>
       </item>
     </section>
