@@ -1,5 +1,6 @@
 0.2.6 (05.07.25)
 
+ - Added "New Window" in menu
  - Separated preferences logic and ui
  - Preferences can now be translated
 
